gts-macros/tests/compile_fail/missing_file_path.rs
//! Test: Missing required attribute dir_path

use gts_macros::struct_to_gts_schema;

#[struct_to_gts_schema(
    base = true,
    schema_id = "gts.x.app.entities.user.v1~",
    description = "User entity",
    properties = "id"
)]
pub struct User {
    pub id: String,
}

fn main() {}
