gts-macros/tests/compile_fail/missing_file_path.stderr
error: unexpected end of input, Missing required attribute: dir_path
  --> tests/compile_fail/missing_file_path.rs:5:1
   |
 5 | / #[struct_to_gts_schema(
 6 | |     base = true,
 7 | |     schema_id = "gts.x.app.entities.user.v1~",
 8 | |     description = "User entity",
 9 | |     properties = "id"
10 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
